@@ -276,24 +276,11 @@ foreach ($components as $component) {
 	
 	$data[6] = '<a style="display: inline; float: left" href="' . $url . '&search_id_group='  . $search_id_group .
 		'search_string=' . $search_string . '&duplicate_network_component=1&source_id=' . $component['id_nc'] . '">' . 
-		print_input_image ('dup', 'images/copy.png', 1, '', true, array ('title' => __('Duplicate'))) . '</a>';
-//	$data[6] .= '<form method="post" action="index.php?sec=galertas&sec2=godmode/modules/manage_network_components" style="display: inline; float: left">';
-//	$data[6] .= print_input_hidden ('duplicate_network_component', 1, true);
-//	$data[6] .= print_input_hidden ('source_id', $component['id_nc'], true);
-//	$data[6] .= print_input_image ('dup', 'images/copy.png', 1, '', true, array ('title' => __('Duplicate')));
-//	$data[6] .= '</form> ';
+		print_image('images/copy.png', true, array('alt' => __('Duplicate'), 'title' => __('Duplicate'))) . '</a>';
 	$data[6] .= '<a href="' . $url . '&delete_component=1&id=' . $component['id_nc'] . '&search_id_group='  . $search_id_group .
 		'search_string=' . $search_string . 
 		'" onclick="if (! confirm (\''.__('Are you sure?').'\')) return false" >' . 
-		print_input_image ('delete', 'images/cross.png', 1, '', true, array ('title' => __('Delete'))) . '</a>';
-//	$data[6] .= '<form method="post" action="'.$url.'" onsubmit="if (! confirm (\''.__('Are you sure?').'\')) return false">';
-//	$data[6] .= print_input_hidden ('delete_component', 1, true);
-//	$data[6] .= print_input_hidden ('id', $component['id_nc'], true);
-//	$data[6] .= print_input_hidden ('search_id_group', $search_id_group, true);
-//	$data[6] .= print_input_hidden ('search_string', $search_string, true);
-//	$data[6] .= print_input_image ('delete', 'images/cross.png', 1, '', true,
-//			array ('title' => __('Delete')));
-//	$data[6] .= '</form>';
+		print_image('images/cross.png', true, array('alt' => __('Delete'), 'title' => __('Delete'))) . '</a>';
 	
 	array_push ($table->data, $data);
 }
